# daredevil

./: README.md  pyproject.toml
daredevil_backend/: pyproject.toml
daredevil_backend/routes/github/: authenticate.py
daredevil_backend/tests/routes/github/: test_get_app.py
src/daredevil/: app.py  daredevil.tcss  main.py
src/daredevil/models/: globals.py
