[project]
authors = [
    {name="woodFordR", email="adam@kaewell.com"}
]
name = "daredevil"
version = "0.1.0"
description = "to access and determine VM capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=5.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "textual-dev>=1.7.0",
    "textual[syntax]>=5.0.1",
]

[project.scripts]
example-pkg = "daredevil:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

